Possible fix for spacing issue in headings
Some systems seem to be experiencing an odd spacing issue with headings in some cases; hopefully this correct it.

--- a/obsidian.css
+++ b/obsidian.css
@@ -748,7 +748,7 @@ input,
 /* Edit — Headings */
 .cm-s-obsidian .cm-header {
   padding-left: 0.5rem;
-  padding-right: 0.6rem;
+  /* padding-right: 0.6rem; */
 }
 .cm-s-obsidian .HyperMD-header-1 {
   font-size: calc(var(--editor-font-size) * 1.6);
